# moria8

./: .clauderules  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURAL_ADVICE.md  AUDIT.md  BUILDPLAN.md  BUILDPLAN_HISTORY.md  C128_PLAN.md  CHANGELOG.md  CLAUDE.md  CROSS_PLATFORM_STRATEGY.md  DESIGN.md  DESIGN_PLAN.md  FEATURES.md  GEMINI.md  LAUNCH_PLAN.md  Makefile  R17_PLAN.md  README.md  REVIEW_REPORT.md  WIZARD.md  boot.s  color.s  combat.s  config.s  dungeon_features.s  dungeon_gen.s  dungeon_los.s  dungeon_render.s  ego_items.s  huffman.s  huffman_data.s  input.s  item.s  main.s  math.s  memory.s  memory_saving_analysis.md  monster.s  (+49 more)
.claude/: settings.local.json
artwork/: CREDITS.md
commodore/: AUDIT.md  BUILDPLAN.md  BUILDPLAN_HISTORY.md  C64_TO_VIC20_ANALYSIS.md  CODE_AUDIT.md  DESIGN.md  ENCHANTED_ITEMS_PLAN.md  HEADROOM_REPORT.md  LOOK_PLAN.md  Makefile  SPELLS.md  SPELL_TEST_PLAN.md  TEST_PLAN_TOP5.md  UI_STATUS_PLAN.md  ai_agent_design.md  disk_test_catalog.py  disk_test_matrix.py
core/: bash.s  color.s  combat.s  combat_action_strings.s  disarm_helpers.s  dungeon_consts.s  dungeon_data.s  dungeon_direction.s  dungeon_feature_actions.s  dungeon_feature_gen.s  dungeon_features.s  dungeon_gen.s  (+93 more)
moria8-ai/: .gitignore  pyproject.toml
moria8-ai/moria_ai/: __init__.py  action_map.py  game_interface.py  memory_map.py  moria_env.py  symbol_loader.py  telemetry.py  vice_bridge.py
moria8-ai/scripts/: debug_vice.py  launch_vice.sh  moria_dashboard.py  reset_vice.py  smoke_test.py  train_stage0.py
moria8-ai/tests/: test_memory_map.py  test_symbol_loader.py
(+610 files in other folders)
