[project]
name = "moria8-ai"
version = "0.1.0"
description = "AI agent test & training system for Moria on C64/C128 via VICE emulation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
train = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "tensorboard>=2.14",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["moria_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
